--- a/res/color_maps/turbo.xml
+++ b/res/color_maps/turbo.xml
@@ -1,5 +1,5 @@
 <ColorMaps>
-<ColorMap name="Turbo" space="RGB">
+<ColorMap name="turbo" space="RGB">
 <Point x="0.00000000" o="1.0" r="0.18995000" g="0.07176000" b="0.23217000" />
 <Point x="0.02564103" o="1.0" r="0.21925000" g="0.14698692" b="0.41360769" />
 <Point x="0.05128205" o="1.0" r="0.24257462" g="0.22025846" b="0.57111231" />
